--- a/jhns.html
+++ b/jhns.html
@@ -1,18 +1,17 @@
-<span id="a">jhNsXO@Earth</span>:<span id="b">~</span
-><span id="c">$</span> cd jhNsXO/About_Me
-<span id="a">jhNsXO@Earth</span>:<span id="b">~</span
-><span id="c">$</span> cat johansson.txt<br /><br />
-"<span id="k">Hey there, nice to see you here.</span>" This is Markus Johansson.
-<p>Welcome</p>
+<span id="a">jhNsXO@Earth</span>:<span id="b">~</span><span id="c">$</span> cd jhNsXO/About_Me
+<span id="a">jhNsXO@Earth</span>:<span id="b">~</span><span id="c">$</span> cat johansson.txt<br /><br />
+<p>"<span id="k">Hey there, nice to see you here.</span>" This is Markus Johansson.</p>
 <p>
-  I am a student, you can checkout my resume here.
+  I am a student, you can checkout my resume here.<br />
   <a href="./cv.pdf"> Resume</a>
 </p>
 <p>
-  I usally waste my time doing cool little projects.<br /><br /><br /> You can check some of them out on my <a href="https://github.com/jhNsXO/" >GitHub</a>.
+  I usally waste my time doing little side projects.<br />
+  You can check some of them out over on my <a href="https://github.com/jhNsXO/" >GitHub</a>.
 </p>
-
-You can also contact me through email, feel free to send me an email at
-<a href = "mailto: markus@johansson.uk">"markus@johansson.uk"</a>.
+<p>
+  You can also contact me through email, feel free to send me one at
+  <a href = "mailto: markus@johansson.uk">"markus@johansson.uk"</a>.
+</p>
 
 <p>Cheers!</p>
