--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
   <script type="text/javascript" src="assets/js/index.js">
   </script>
+
   <div id="console"></div>
+  <div id="bg">
+    <pre id="ASCII-Holder" class="flame_animation"></pre>
+  </div>
+
+  <script type="text/javascript" src="assets/js/fire.js">
   </script>
 </body>
 
